fix: Strong progress on developing APIs, still a WIP
